--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -36,8 +36,10 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
-                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                    <div class="col-lg-9 col-sm-12">
+                        <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
+                                                (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                    </div>
                 </div>
                 <div class="row">
 
