--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -1,110 +1,106 @@
-<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div
+    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
-  <!-- Header -->
+    <!-- Header -->
 
-  <div class="row py-3">
-    <div class="col-lg-7 col-sm-12">
-        <div class="heading">Create Fense</div>
+    <div class="row py-3">
+        <div class="col-lg-7 col-sm-12">
+            <div class="heading">Create Fense</div>
+        </div>
+        <div class="col-lg-5 col-sm-12 self-center mt-2">
+            <p class="text-right">
+                <button [routerLink]="['/user-management/viewCirclesfence']"
+                        class="mr-4 bg-gray-500 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary rounded-md text-white">
+                    <mat-icon class="mr-2 text-white">visibility</mat-icon>
+                    View Map
+                </button>
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon>
+                    Advance Filter
+                </button>
+
+            </p>
+        </div>
     </div>
-    <div class="col-lg-5 col-sm-12 self-center mt-2">
-        <p class="text-right">
-          <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4 bg-gray-500 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary rounded-md text-white"  >
-            <mat-icon class="mr-2 text-white">visibility</mat-icon>View Map
-          </button>
-          <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
-            </button>
 
-          </p>
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+
+
+            <div class="row">
+                <app-zone-branch-circle [form]="create_circ_form" [should_show_circle]="false"
+                                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                <div class="col-lg-3 col-sm-12">
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
+                        <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                                aria-expanded="false" aria-controls="collapseExample" mat-raised-button
+                                class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                                type="button" (click)="find()">
+                            <mat-icon class="mr-2">search</mat-icon>
+                            Find
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
-</div>
-
-<div class="collapse" id="collapseExample">
-  <div class="card card-body">
 
 
-        <div class="row">
-          <div class="col-lg-4 col-sm-12">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-              <mat-label>Zone</mat-label>
-              <mat-select (selectionChange)="GetBranches($event)">
-                <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
-                  {{zone.ZoneName }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-        
-        
-          </div>
-          <div class="col-lg-4 col-sm-12">
-            <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-              <mat-label>Branch</mat-label>
-              <mat-select  (selectionChange)="GetCircles($event)">
-                <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
-                  {{branch.Name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+    <!-- Main -->
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-y-scroll">
+
+        <!-- Products list -->
+        <div class="flex flex-auto " style="flex-direction: column;">
+            <div class="flex flex-col flex-auto sm:mb-2 sm:overflow-y-auto">
+                <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
+                           matSortActive="id" matSortDirection="asc" matSortDisableClear>
+
+                    <ng-container matColumnDef="circleId">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Circle Id</mat-header-cell>
+                        <mat-cell *matCellDef="let circle">{{circle.Id}}</mat-cell>
+                    </ng-container>
+
+
+                    <ng-container matColumnDef="circleCode">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Circle Code</mat-header-cell>
+                        <mat-cell *matCellDef="let circle"> {{circle.CircleCode}}</mat-cell>
+                    </ng-container>
+
+
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+
+                        <mat-cell *matCellDef="let circle">
+                            <button mat-icon-button color="primary" (click)="editGeofencing(circle)"
+                                    *ngIf="circle.HasFence">
+                                <mat-icon title="View">map</mat-icon>
+                            </button>
+                            <button mat-icon-button color="primary" (click)="editGeofencing(circle)"
+                                    *ngIf="!circle.HasFence && _currentActivity.C">
+                                <mat-icon title="Add">add</mat-icon>
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background">
+                    </mat-header-row>
+
+                    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                </mat-table>
+
+                <div class="mat-table__message" *ngIf="!loadingdata && dataSource.data.length==0">No records found</div>
+                <div class="mat-table__message" *ngIf="loadingdata">Please wait....</div>
+
+            </div>
+
         </div>
 
-  </div>
-</div>
-
-
-
-
-  <!-- Main -->
-  <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-y-scroll">
-
-    <!-- Products list -->
-    <div class="flex flex-auto " style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-2 sm:overflow-y-auto">
-        <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
-          matSortActive="id" matSortDirection="asc" matSortDisableClear>
-
-          <ng-container matColumnDef="circleId">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Circle Id</mat-header-cell>
-            <mat-cell *matCellDef="let circle">{{circle.Id}}</mat-cell>
-          </ng-container>
-
-
-
-          <ng-container matColumnDef="circleCode">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Circle Code</mat-header-cell>
-            <mat-cell *matCellDef="let circle"> {{circle.CircleCode}}</mat-cell>
-          </ng-container>
-
-   
-
-          <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-            
-            <mat-cell *matCellDef="let circle">
-              <button mat-icon-button color="primary" (click)="editGeofencing(circle)" *ngIf="circle.HasFence">
-                <mat-icon title="View">map</mat-icon>
-              </button>
-              <button mat-icon-button color="primary" (click)="editGeofencing(circle)"
-                *ngIf="!circle.HasFence && _currentActivity.C">
-                <mat-icon title="Add">add</mat-icon>
-              </button>
-            </mat-cell>
-          </ng-container>
-
-          <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background">
-          </mat-header-row>
-
-          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-        </mat-table>
-
-        <div class="mat-table__message" *ngIf="!loadingdata && dataSource.data.length==0">No records found</div>
-        <div class="mat-table__message" *ngIf="loadingdata">Please wait....</div>
-       
-      </div>
-
     </div>
-
-  </div>
-  <mat-paginator [length]="30" [pageSize]="30" [pageSizeOptions]="[30, 50, 100]" [showFirstLastButtons]="true"></mat-paginator>
+    <mat-paginator [length]="30" [pageSize]="30" [pageSizeOptions]="[30, 50, 100]"
+                   [showFirstLastButtons]="true"></mat-paginator>
 
 </div>
