--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -26,8 +26,8 @@
             <div [formGroup]="listForm" class="mt-2">
 
                 <div class="flex" style="flex-wrap: wrap;">
-                    <div class="w-3/12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 200px;">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">PP No.</mat-label>
@@ -36,12 +36,12 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="w-9/12">
+                    <div >
                     <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     </div>
-                    <div class="w-3/12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <div class="mx-2" >
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 200px;">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Choose start date</mat-label>
@@ -62,8 +62,8 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="w-3/12 ml-2">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 200px;">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Choose end date</mat-label>
@@ -83,8 +83,8 @@
                         </div>
 
                     </div>
-                    <div class="w-3/12 ml-2">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 265px;">
 
                             <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
                                     aria-expanded="false" aria-controls="collapseExample" mat-raised-button
