--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                <button class="mt-2   py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon>
@@ -88,7 +88,7 @@
 
                             <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
                                     aria-expanded="false" aria-controls="collapseExample" mat-raised-button
-                                    class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                                    class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                                     type="button" (click)="find()">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Find
